--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -40,7 +40,7 @@
     $icon-closed: config.get("icon", "closed");
     $top: config.get("icon", "top");
 
-    @if ($icon-closed == null or $icon-closed == "") {
+    @if $icon-closed == null or $icon-closed == "" {
         @error "The config option icon.closed is not defined. You have to configure icon.closed in order to use the @mixin icon-closed.";
     }
 
@@ -65,7 +65,7 @@
 @mixin icon-opened() {
     $icon-opened: config.get("icon", "opened");
 
-    @if ($icon-opened == null or $icon-opened == "") {
+    @if $icon-opened == null or $icon-opened == "" {
         @error "The config option icon.opened is not defined. You have to configure icon.opened in order to use the @mixin icon-opened.";
     }
 
