--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -17,7 +17,7 @@
 /// @prop {String} icon.opened [null] - Name des Icons im geöffneten Zustand
 /// @prop {Number} icon.spacing [null] - Abstand zwischen Icon und Titel
 
-$_config: (
+$-config: (
     "padding": (
         "right": 0,
         "left": 0
@@ -46,11 +46,11 @@ $_config: (
 /// Ermöglicht das Konfigurieren der Akkordeon-Komponente.
 /// @param {Map} $config
 @mixin configure($config) {
-    $_config: map.deep-merge($_config, $config) !global;
+    $-config: map.deep-merge($-config, $config) !global;
 }
 
 /// Ermöglicht Zugriff auf Werte aus der internen Konfiguration.
 /// @param {String} $key
 @function get($key...) {
-    @return map.get($_config, $key...);
+    @return map.get($-config, $key...);
 }
